Check HTML - dari HTML 9 sampai HTML 12

--- a/src/10. Goa Gajah Ubud.jade
+++ b/src/10. Goa Gajah Ubud.jade
@@ -1,54 +1,51 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Goa Gajah Ubud
+  include header
 
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Goa Gajah Ubud
+        img(src="images/Goa Gajah - 1.jpg" height = 300 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Obyek wisata Bali, tidak hanya dikenal dengan pantai dreamland yang mempesona, maupun menonton pertunjukan tari kecak di pura Uluwatu. Salah satu obyek wisata Bali menarik lainnya, yang ramai di kunjungi wisatawan saat berlibur di Bali adalah Goa Gajah di Ubud. Objek pariwisata ini, hampir setiap hari ramai mendapat kunjungan dari para wisatawan dan banyak penyedia jasa Bali tour murah, memasukan objek wisata ini dalam jadwal tour mereka.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-       img.big(src="images/Goa Gajah - 1.jpg")
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-       h1 Goa Gajah Ubud
+      section
        h2 Objek Wisata Di Bali Yang Patut Di Kunjungi
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
        p Goa Gajah Ubud terletak di sebelah barat Desa Bedulu, Kecamatan Blahbatuh, Kabupaten Gianyar. Jaraknya sekitar 26 km dari kota Denpasar. Lokasi tepatnya adalah di tepi jurang dan merupakan pertemuan dari sungai kecil di desa tersebut.
+
+      section
        p Diduga kata Goa Gajah berasal dari kata &quotLwa Gajah&quot, yang berarti wihara tempat pemujaan para Bhiksu umat beragama Budha. Pada lontar Negarakertagama yang disusun oleh Mpu Prapanca pada tahun 1365 M, terdapat nama tersebut. Sedangkan kata &quotLwa&quot berarti sungai. Maka disimpulkan menjadi pertapaan yang terletak di tepi sungai.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
        p Dari areal parkir menuju Goa Gajah Ubud, wisatawan harus menuruni tangga menuju Goa Gajah Ubud. Tempat ini dikelilingi pepohonan hijau yang rindang, sehingga suasananya sangat sejuk dan asri
+
+      section
        p Menurut petugas yang menjaga obyek wisata ini, pepohonan tersebut sudah berusia ratusan tahun. Komplek Goa Gajah di Ubud secara keseluruhan dapat dilihat dari tangga. Sesampai di bawah akan terdengar gemericik suara air yang mengalir dari pancuran arca. Bebatuan bekas bangunan yang dulunya hancur akibat gempa, juga ditemukan di sekitar pancuran. Sedangkan Goa Gajah Ubud sendiri, letaknya tidak jauh dari pancuran arca tersebut.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
        p Pintu masuk melalui mulut goa hanya cukup untuk 1 orang. Diluarnya terdapat ukir &#45 ukiran dan 2 patung penjaga. Bagian dalam goa berbentuk huruf T, dengan tinggi sekitar 2 meter dan lebar 2 meter. Bagian kiri dan kanan lorong juga terdapat ceruk yang  mungkin pada jaman dahulu adalah tempat bertapa. Namun sekarang wisatawan dapat duduk maupun berbaring disana. Pada ujung barat lorong terdapat Arca Ganesha dan ujung timur lorong terdapat 3 lingga.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-       img.big(src="images/Goa Gajah - 2.jpg")
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
        p Selain itu disekitar goa, juga terdapat patung petirtaan dengan tujuh patung widyadara &#45 widyadari yang sedang memegang air suci. Total patungnya ada tujuh, yang merupakan symbol dari tujuh sungai di India, tempat kelahiran agama Hindu dan Budha.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      Section
+       H3 Gambaran Goa Gajah
+       img.big(src="images/Goa Gajah - 2.jpg" height = 300 width = 600)
+
+      section
        h2 Cara Terbaik Ke Tempat Wisata Goa Gajah Di Bali
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
        p Jika anda memerlukan sarana transfortasi untuk menuju tempat wisata ini, anda dapat mengunakan jasa Bali sewa mobil murah yang kami sediakan untuk anda, baik dengan supir atau tanpa supir. Bagi anda yang menginginkan kemewahan dan kenyamanan dalam kendaraan, anda dapat menggunakan jasa sewa Alphard di Bali yang kami sediakan untuk anda.
+
+      section
        p Jika anda menyukai tempat wisata <a href = "http://www.rentalmobilbali.net/goa-lawah/">Goa Gajah</a> di Bali, mungkin anda juga akan tertarik mengunjungi pura Goa Lawah. Jika anda memerlukan petunjuk arah untuk menuju lokasi dari Goa Gajah, silakan gunakan peta di Google Map dengan cara mengklik link ini Lihat Peta Lebih Besar.
+   include footer
 
 
 
-    script(src='build/build.js')
 
