--- a/src/12. Air Terjun Tegenungan.jade
+++ b/src/12. Air Terjun Tegenungan.jade
@@ -1,62 +1,54 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Air Terjun Tegenungan
+  include header
 
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Air Terjun Tegenungan
-        img(src="images/air-terjun-tegenungan.jpg" width = 400)
+        img(src="images/air-terjun-tegenungan.jpg" height = 300 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+      section
         h2 Lokasi Air Terjun Tegenungan Gianyar Bali
-        p Objek wisata air terjun Tegenungan Gianyar juga memiliki nama lain yaitu air terjun Kemenuh, karena berada di desa Kemunuh kabupaten Gianyar. Alamat atau Lokasi dari air terjun Kemenuh, berada di Desa Kemenuh yang merupakan wilayah Kecamatan Sukawati, Kabupaten Gianyar. Untuk melihat lokasi pasti dan mengetahui jalan menuju air terjun Tegenungan Gianyar, silakan klik link ini lokasi air terjun Kemenuh.
+        p Objek wisata air terjun Tegenungan Gianyar juga memiliki nama lain yaitu air terjun Kemenuh, karena berada di desa Kemunuh kabupaten Gianyar. Alamat atau Lokasi dari air terjun Kemenuh, berada di Desa Kemenuh yang merupakan wilayah Kecamatan Sukawati, Kabupaten Gianyar. Untuk melihat lokasi pasti dan mengetahui jalan menuju air terjun 
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Dilihat dari peta, maka lokasi air terjun Tegenungan adalah lokasi air terjun yang terdekat dengan Bali Selatan. Sebagian besar air terjun di Bali berlokasi di daerah pengunungan atau daerah yang memiliki dataran tinggi, tetapi air terjun Tegenungan, satu-satunya yang berada di dataran rendah.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         P Jika anda menginap di kawasan wisata Kuta, untuk mencapai lokasi dari air terjun Kemenuh akan ditempuh dalam kurun waktu 1 jam, tentunya jalan dalam kondisi normal atau tidak macet.
-         P Jaraknya adalah 34 kilometer, untuk melihat peta rute dari Kuta silakan klik link ini, rute ke air terjun Kemenuh dari Kuta.
-         P Lokasinya tidak berada di tepi jalan, agar anda menemukan lokasi dari air terjun Kemenuh, anda perlu menuruni anak tangga yang jumlahnya ratusan dari tempat parkir, sampai anda menemukan bibir sungai Petanu.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Untuk menuruni ratusan anak tangga, tidak begitu terasa capeknya. Tapi saat anda harus kembali ke tempat parkir kendaraan maka anda harus menaiki anak tangga yang jumlahnya ratusan.
-         P Di sinilah ketahanan stamina anda di uji. Jadi jika anda kurang kuat untuk menaiki anak tangga, kami tidak sarankan anda untuk mengunjungi tempat wisata air terjun ini.
+      section
+         P Jaraknya adalah 34 kilometer, untuk melihat peta rute dari Kuta silakan klik link ini, rute ke air terjun Kemenuh dari Kuta. Lokasinya tidak berada di tepi jalan, agar anda menemukan lokasi dari air terjun Kemenuh, anda perlu menuruni anak tangga yang jumlahnya ratusan dari tempat parkir, sampai anda menemukan bibir sungai Petanu.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
+        p Untuk menuruni ratusan anak tangga, tidak begitu terasa capeknya. Tapi saat anda harus kembali ke tempat parkir kendaraan maka anda harus menaiki anak tangga yang jumlahnya ratusan. Di sinilah ketahanan stamina anda di uji. Jadi jika anda kurang kuat untuk menaiki anak tangga, kami tidak sarankan anda untuk mengunjungi tempat wisata air terjun ini.
+
+      section
         p Air terjun Tegenungan, memiliki tinggi kira-kira 4 meter, tapi memiliki debit air yang lumayan banyak. Air di lokasi air terjun Kemenuh sangat jernih dan cocok buat anda yang sekedar ingin bermain air atau mandi. Di lokasi air terjun ini, anda juga dapat melihat pura dan pancoran air yang berasal dari mata air.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/pancoran-air-terjun-kemenuh.jpg" width=500)
+      section
+        h2 gambaran pancoran air terjun kemenuh
+        img(src="images/pancoran-air-terjun-kemenuh.jpg" height = 300 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Fasilitas, Tiket Masuk & Tempat Parkir
         p Objek wisata air terjun Tegenungan kurang mendapat perawatan, jadi terkesan kurang rapi dan bersih. Hal ini akan terlihat pada saat anda sudah sampai di tempat parkir kendaraan. Di sepanjang areal sungai, juga banyak pohon yang telah ditebang dan ada sampah yang berserakan.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Khusus di areal parkir, anda akan melihat adanya warung-warung sederhana yang menjual makanan dan minuman. Untuk tiket masuk anda akan tidak akan dikenakan biaya. Dulu saat di tempat ini ada wisata bunjee jumping, anda akan dikenakan biaya tiket masuk sebesar Rp 4.000 untuk dewasa dan anak-anak sebesar Rp 2.000. Wisata bunjee jumping saat ini sudah tidak ada lagi di lokasi wisata air terjun Kemenuh.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Transfortasi Wisata Di Bali
+      section
         p Di objek wisata air terjun Tegenungan tidak ada sarana transfortasi umum, jadi anda harus membawa kendaraan anda sendiri atau dengan mencari penyedia jasa Bali rent car. Bagi anda yang tidak terbiasa mengemudi di jalanan yang agak rusak dan kecil, maka kami sarankan anda untuk mencari jasa sewa mobil di Bali dengan supir.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Objek wisata air terjun Tegenungan sangat dekat dengan lokasi dari pasar seni Sukawati, di pasar ini anda dapat membeli beranekaragam oleh-oleh khas Bali yang dijual murah. Jika anda pintar dalam menawar, maka anda akan jauh mendapatkan harga murah untuk oleh-oleh khas Bali.
 
-
-   script(src='build/build.js')
-
-
-
-
+   include footer
 
 
 
