--- a/src/2. Puri Ubud.jade
+++ b/src/2. Puri Ubud.jade
@@ -12,7 +12,11 @@ html
 
       section
         h2 Sejarah Puri Ubud 
+
+      Section
         p Pada saat kerajaan Majapahit runtuh di abad ke 15, maka terjadi eksodus besar-besaran dari bangsawan Jawa untuk migrasi ke pulau Bali. Bangsawan dari pulau Jawa inilah yang mendirikan kerajaan Gelgel yang berada di kabupaten Klungkung, kabupaten di bagian tenggara pulau Bali. Kerajaan Gelgel inilah yang memberikan perlindungan kepada para bangsawan dari Jawa yang migrasi ke pulau Bali. Bangsawan dari Jawa yang membawa sistem kasta di Bali.
+
+      Section
         p Pada abad ke 17 banyak berdiri kerajaan baru di wilayah pulau Bali, salah satunya di Ubud. Pada abad ke 17, banyak di bangun rumah para bangsawan di Ubud yang di beri nama Puri. Pada periode ini, banyak terjadi peperangan antar kerajaan di Bali, yang memperebutkan kekuasaan akan perluasan daerah.
 
       Section
@@ -20,21 +24,31 @@ html
 
       section
         p Konflik yang terjadi di Ubud pada akhir abad ke 17, antara dua orang sepupu, yang satu berada di wilayah Padang Tegal Ubud dan yang lagi satu berada di wilayah Taman Ubud, yang berada di sebelah utara wilayah Padang Tegal Ubud. Peperangan antar ke dua sepupu ini, membuat raja Sukawati mengutus ke dua saudarnya untuk mengamankan wilayah Ubud.
+
+      Section
         P Saudara dari Raja Sukawati tersebut adalah Tjokorde Ngurah Tabanan yang dikirim ke wilayah Peliatan Ubud dan Tjokorde Tangkeban ke wilayah Sambahan Ubud. Kedua saudara dari raja Sukawati kemudian membangun istana di daerah tujuan mereka masing-masing dengan tujuan mengamankan wilayah Ubud. Setelah Tjokorde Ngurah Tabanan yang membangun kerajaan di Peliatan Ubud, maka Tjokorde Ngurah Tabanan dengan dibantu oleh Raja Mengwi, memenuhi wilayah Ubud dengan penduduk. Dengan bertambahnya jumlah penduduk di Ubud, maka perekonomian mulai berkembang.
 
       Section
          p Pada abad ke 19, Belanda mulai memasuki pulau Bali. Beberapa kerajaan seperti kerajaan Mengwi merasa tidak senang akan kehadiran Belanda di daerah mereka. Kecerdikan Belanda yang mampu memprovokasi musuh lama kerajaan Mengwi, untuk membuat aliansi untuk menyerang kerajaan Mengwi. Karena di serang oleh banyak musuh, maka kerajaan Mengwi mengalami kekelahan telak, yang membuat wilayah mereka dibagi-bagi oleh kerajaan aliansi penyerang.
+
+      Section
          p Pemerintahan Belanda mulai ikut campur dalam urusan politik di Bali pada awal abad ke 19, dengan menyerang kerajaan-kerajaan di Badung, kerajaanBuleleng dan kerajaan Klungkung. Peperangan besar pun terjadi, perang ini di Bali lebih dikenal dengan nama Puputan. Pada awal abad 21 di bawah pemerintahan Tjokorde Gede Raka Sukawati, wilayah Ubud menjadi wilayah cabang dari Sukawati. Pada tahun 1981, maka di Ubud ditetapkan sebagai sebuah kecamatan di wilayah kabupaten Gianyar dengan mencangkup wilayah desa Tegallalang, Peliatan, Mas dan Kedewatan.
 
       Section
         h2 Sejarah Pariwisata Ubud
+
+      Section
         p Pada awal tahun 1930an, banyak wisatawan asing yang datang ke Bali, terutama mengunjungi wilayah Ubud. Kenapa hanya di Ubud? Hal ini dikarenakan kemampuan dari Tjokorde Gede Agung Sukawati yang memerintah Ubud (saudara Raja Sukawati - Tjokorde Gede Raka Sukawati) dalam bahasa Inggris dan bahasa Belanda. Selain itu karena kemampuan dan pengetahuan raja Ubud akan bisnis, maka di bangunlah guest house untuk tempat wisatawan menginap di Ubud. Perkembangan pariwisata Ubud juga tidak lepas dari peran Raja Sukawati, kakak dari Raja Ubud yang mengundang seniman lukis Walter Spiers ke Ubud untuk tinggal dan melukis di Ubud.
 
       Section
         p Tinggalnya Walter Spiers di Ubud menjadikan trend di kalangan seniman lukis asing untuk berkarya di Ubud. Melalui lukisan inilah, Ubud mulai terkenal ke mancanegara, karena lukisan dari pelukis asing, mengambarkan tentang kehidupan di Ubud, serta pelukis asing melakukan pameran lukisan di luar negeri. 
+
+      Section
         p Sebuah asosiasi seni lukis didirikan oleh Tjokorde Gede Agung (raja Ubud), Walter Spies dan Rudolf Bonnet, serta beberapa seniman lokal yang diberi nama Pita Maha. Tujuan dari asosiasi seni lukis ini adalah mengumpulkan para seniman Bali, untuk mengajarkan kesenian kepada para muda-mudi di daerah Ubud. Oleh sebab itu, sampai saat ini, objek wisata Ubud menjadi pusat museum di Bali. Museum yang ada di Ubud seperti Arma Museum Ubud dan Museum Puri Lukisan Ubud.
 
 
 
    include footer
+
+
 
