--- a/src/4. Tari Kecak Ubud .jade
+++ b/src/4. Tari Kecak Ubud .jade
@@ -14,6 +14,8 @@ html
 
       section
          h3 Jadwal & Harga Tiket Tari Kecak Ubud
+
+      Section
          p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon dicatat, tidak setiap hari dipentaskan tarian kecak di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon lihat jadwal di bawah, untuk kepastian tempat pementasan, harga tiket dan jam pementasan tarian kecak di Ubud.
       
 
@@ -160,7 +162,7 @@ html
 
       Section
         p Selain jadwal rutin dari tari kecak Ubud diatas, ada jadwal tari kecak lain yang hanya diadakan pada saat bulan purnama. Tempat pementasan pada saat bulan purnama adanya di Museum Arma Ubud, jadwal pentas pada jam 18:45, dengan harga tiket Rp. 100.000.
-        p Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.
+        h3 Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.
 
       section
         h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
@@ -171,7 +173,11 @@ html
 
       Section
         p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil + driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil.
+
+      Section
         p Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
 
    include footer
+
+
 
