--- a/src/9. Arma Museum Ubud.jade
+++ b/src/9. Arma Museum Ubud.jade
@@ -1,65 +1,60 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Arma Museum Ubud
+  include header
 
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Arma Musemum Ubud
-        img(src="images/amu1.jpg" width = 500)
+        img(src="images/amu1.jpg" height = 300 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+      section
         p Liburan di Ubud Bali, sangat di minati oleh wisatawan domestik dan mancanegara. Karena tempat wisata di Ubud, banyak menawarkan aktivitas wisata yang sangat berbeda dengan tempat wisata lain. Begitu banyak hal yang dapat anda lakukan di tempat wisata Ubud.
+
+      section
         p Menonton kesenian Bali, melihat pemandangan sawah terasering di Tegalalang Ubud dan aktivitas rafting di Ubud. Dihalaman ini, kami akan menuliskan informasi mengenai wisata kesenian di Bali dengan mengunjungi Arma museum Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/amu.jpg" width = 500)
+      section
+        img(src="images/amu.jpg" height = 300 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Wisata Kesenian Di Bali
+
+      section
         h3 Arma Museum Ubud
         P Disaat anda melakukan wisata di Bali dan memutuskan untuk berlibur di Ubud, tentunya anda tidak mau waktu liburan anda terbuang percuma. Bagi anda yang menyukai atau ingin tahu tentang kesenian Bali, museum seni Agung Rai atau yang lebih dikenal dengan nama Arma Museum Ubud, salah satu tempat wisata di Ubud yang harus anda kunjungi.
+      section
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
          p Museum ini berada di pusat jantung pariwisata Ubud, tidak akan susah buat anda untuk mencari lokasi dari Arma Museum Ubud. Alamatnya berada di Jalan Pengosekan, Ubud, Gianyar, 80571, dengan nomer telphone (0361) 974228. Untuk mendapatkan petunjuk arah, silakan klik lini ini untuk melihat peta lokasi yang lebih besar. Lokasi museum Arma.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      Section
         h2 Hal Yang Menarik Di Museum Seni Agung Rai
+
+      Section
         p Museum seni Agung Rai di bangun di lokasi yang kontur tanah naik turun, serta memiliki nuansa alam Ubud. Yang menjadi daya tarik terbaik dari museum Arma adalah design kebun bernuansa budaya Bali.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
         P Banyak patung yang terdapat di museum ini, selain itu anda dapat melihat Lily Pound dan tanaman angrek yang tertata rapi. Kami tahu betul, tidak semua orang menyukai melihat lukisan atau melihat pameran seni.
-        p Bagi anda yang menyukai nuansa kebun dengan design khas Bali dengan nuasa berbeda, maka tidak ada ruginya mengunjungi museum Agung Rai Ubud.
-      
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Jika anda memutuskan untuk mengunjungi musem Arma, jangan lupa untuk membawa kamera. Begitu banyak hal yang dapat anda abadikan dengan foto di tempat wisata ini.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
+        p Bagi anda yang menyukai nuansa kebun dengan design khas Bali dengan nuasa berbeda, maka tidak ada ruginya mengunjungi museum Agung Rai Ubud. Jika anda memutuskan untuk mengunjungi musem Arma, jangan lupa untuk membawa kamera. Begitu banyak hal yang dapat anda abadikan dengan foto di tempat wisata ini.
+
+      section
         h3 Biaya Tiket Masuk Ke Museum Arma Ubud & Jam Buka
+
+      section
         p Tiket masuk akan dikenakan sebesar Rp 50.000 jika anda mengunjungi museum Arma Ubud. Biaya tiket masuk sebesar 50 ribu rupiah, sudah termasuk minuman teh dan kopi yang anda dapat nikmati di salah satu cafe di museum ini. Jam buka dari museum Arma Ubud, dari jam 09:00 - jam 18:00 setiap hari, tentunya dengan waktu Bali.
         
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
+       ul
         h3 Koleksi Lukisan Arma Museum Ubud
         P Museum Arma Ubud, memiliki lukisan dari berbagai aliran seni lukis, seperti:
-        p 1.Lukisan Kamasan.
-        p 2.Lukisan Pre War.
-        p 3.Lukisan dari orang Eropa yang tinggal di Bali.
-        p 4.Lukisan dengan aliran modern traditional.
-        p Untuk lebih jelas akan koleksi lukisan di museum Arma, anda dapat melihatnya di link di bawah.
-
-
-   script(src='build/build.js')
-
-
-
-
+        li
+        li Lukisan Kamasan.
+        li Lukisan Pre War.
+        li Lukisan dari orang Eropa yang tinggal di Bali.
+        li Lukisan dengan aliran modern traditional.
+   include footer
 
 
 
