--- a/src/index.jade
+++ b/src/index.jade
@@ -5,55 +5,178 @@ html
   body.classic
     include menu
     article
+      Section
+        h1 Tari Kecak Ubud
+        img(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        P Objek wisata Ubud sangat terkenal akan wisata air atau yang dikenal dengan nama Ayung Rafting Ubuddan wisata kesenian dan salah satunya adalah seni tari Kecak Bali. Banyak wisatawan yang wisata ke Ubud Bali, tidak merasa lengkap apabila tidak menononton pertujukan tari kecak Ubud. Tentunya tidak akan susah buat wisatawan untuk mendapatkan kesempatan menonton tari yang terkadang disebut dengan nama tari kecak api Ubud.
 
       section
-        h1 Ubud Monkey Forest
+         h3 Jadwal & Harga Tiket Tari Kecak Ubud
 
-      section
-        p Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun belum pernah berlibur ke objek wisata ini, pasti tahu dari namanya, bahwa akan dapat melihat kera di salah satu objek wisata Ubud ini
+      Section
+         p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon dicatat, tidak setiap hari dipentaskan tarian kecak di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Mohon lihat jadwal di bawah, untuk kepastian tempat pementasan, harga tiket dan jam pementasan tarian kecak di Ubud.
       
-      section        
-        h2 Lokasi Objek Wisata Ubud Monkey Forest  
-        p Tentunya banyak hal yang dapat dilakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud.
 
-      section        
-        p Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika wisatawan sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.
+      Section
+         h3 Hari Minggu
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left') 
+             td
+             td
+           tr(align='left')
+             td Pura Batukaru
+             td 19:30
+             td Desa Adat Sambahan 
+             td Rp. 75.000,-
+
+      Section
+         h3 Hari Senin
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Desa Junjungan
+             td 18:30
+             td Desa Adat Junjungan
+             td Rp. 75.000,-
+           tr(align='left')
+             td Pura Dalem Ubud
+             td 19:30
+             td Adat Ubud Kaja
+             td Rp. 80.000,-
+
+      Section
+         h3 Hari Selasa
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Jaba Pura Taman Sari
+             td 19:00
+             td Sandhi Suara
+             td Rp. 75.000,-
+
+      Section
+         h3 Hari Rabu
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Taman Kaja
+             td 19:30
+             td Desa Adat Taman Kaja
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Batu Karu
+             td 19:30
+             td Desa Adat Ubud Tengah (Penari Wanita)
+             td Rp. 80.000,-
+
+      Section
+         h3 Hari Kamis
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Puri Agung Peliatan
+             td 18:45
+             td Semara Madya
+             td Rp. 75.000,- / Orang
+           tr(align='left') 
+             td Puri Jaba Pura Taman Sari
+             td 19:30
+             td Sandhi Suara
+             td Rp. 75.000,- / Orang
+           tr(align='left') 
+             td Pura Batu Karu
+             td 19:30
+             td Desa Adat Sambahan
+             td Rp. 75.000,- / Orang
+
+      Section
+         h3 Hari Jumat
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Pura Padang Kertha
+             td 19:00
+             td Padang Subadra
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Ubud
+             td 19:30
+             td Desa Adat Ubud Kaja
+             td Rp. 80.000,-
+
+      Section
+         h3 Hari Sabtu
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left') 
+             td Pura Dalem Taman Kaja
+             td 19:30
+             td Desa Adat Taman Kaja
+             td Rp. 75.000,-
+
+      Section
+        p Selain jadwal rutin dari tari kecak Ubud diatas, ada jadwal tari kecak lain yang hanya diadakan pada saat bulan purnama. Tempat pementasan pada saat bulan purnama adanya di Museum Arma Ubud, jadwal pentas pada jam 18:45, dengan harga tiket Rp. 100.000.
+        h3 Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.
 
       section
-        img.big(src="images/ubudMKF.jpg" height=300 width=600)
+        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
+        img(src="images/tari-kecak-di-pura-uluwatu.jpg" height = 300 width = 600)
 
-      section
-        P Objek wisata monkey forest Ubud Bali, berada di Jalan Monkey Forest, Ubud provinsi Bali dengan kode pos 80571. Jika berangkat dari international airport menuju lokasi dari Ubud monkey forest, di perlukan waktu kurang lebih satu jam.
+      Section
+        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
 
-        p Klik Disini Untuk Melihat, <a href = "http://goo.gl/maps/829iu">Peta Lokasi Monkey Forest Ubud.</a>
+      Section
+        p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil + driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil.
 
-      section
-        h2 Biaya Tiket Masuk Objek Wisata Ubud Monkey Forest 
-        p Jika ingin memasuki objek wisata monkey forest Ubud, akan dikenakan biaya tiket masuk sebesar Rp 20.000 per orang. Harga tiket masuk Ubud Monkey Forest Rp 20.000 per orang, khusus untuk wisatawan domestik. Untuk parkir mobil akan dikenakan biaya Rp 5.000 per mobil.
-
-        p Lihat disini, <a href = "http://www.rentalmobilbali.net/harga-tiket-masuk-wisata-di-bali/">Daftar Harga Tiket Masuk Objek Wisata Di Bali</a>
-
-      section
-        img.big(src="images/ubudMKF2.jpg" height=300 width=600)
-
-      section
-        p Di saat memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum memasuki pintu masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah wisatawan membayar tiket masuk. Di pintu masuk, wisatawan dapat melihat beberapa pedagang pisang yang dapat dibeli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.
-
-      section
-        p Waktu terbaik untuk berkunjung ke Ubud Monkey Forest adalah pada jam 14:00. Karena hampir sebagian dari kera-kera sudah kenyang, mendapatkan makanan dari pengunjung sebelumnya. Hal ini membuat sifat agresif kera-kera sedikit berkurang. Di dalam objek wisata monkey forest di Ubud, banyak sekali terdapat petugas yang mengawasi kera-kera. Jadi pengunjung merasa nyaman dari kera-kera yang sedikit agresif.
-
-      section
-        h3.bullet Ada beberapa tips yang sebaiknya dilakukan jika mengunjungi tempat wisata Ubud Monkey Forest
-        ol
-          li Taruhlah barang berharga di dalam tas, seperti anting-anting, selendang, kacamata ataupun handphone. Jika ingin foto-foto, selalu pegang erat kamera. Barang-barang tersebut akan menarik minat dari kera-kera untuk mengambil.
-          li Berjalanlah di jalan yang sudah disediakan, jangan berjalan melewati areal dari jalan yang sudah disediakan. Hal ini akan membuat kera-kera agresif, karena kera-kera mengira wisatawan memasuki kawasan mereka.
-          li Jangan memukul atau menyakiti kera-kera, hal ini akan membuat kera-kera yang lain akan menyerang anda.
-
-      section
-        h1 Objek Wisata Di Bali Favorit Wisatawan
-
-      section
-        p Selain monkey forest di Ubud, pulau Bali juga memiliki objek wisata lain untuk dapat melihat kera-kera. Tempat wisata tersebut antara lain, <a href = "http://www.rentalmobilbali.net/pura-uluwatu/">Pura Uluwatu</a>, <a href = "http://www.rentalmobilbali.net/alas-kedaton/">Alas Kedaton</a>, Pura Pulaki. Mudah-mudahan informasi yang kami tuliskan di situs ini, berguna bagi wisatawan yang berencana berlibur di Bali dengan mengunjungi monkey forest Bali di Ubud.
+      Section
+        p Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
 
    include footer
+
 
